fix header alignment

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -58,10 +58,12 @@ body {
 }
 
 .text {
-  flex-shrink: 1;
+  flex: auto;
+  flex-wrap: wrap;
 }
 
 .text-container {
+  flex-shrink: 2;
 }
 
 .close-button {
